move java version to 8, fixes